2024-10-07T00:55:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11206725913 # 441
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-07
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 856 1331 / 861 1336
* notice: next accum: outdated-unq outdated-all / unq all: 857 1332 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-22] / []

2024-10-06T00:57:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11197652543 # 440
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-06
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 855 1330 / 861 1336
* notice: next accum: outdated-unq outdated-all / unq all: 856 1331 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-21] / []

2024-10-05T00:52:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11189007416 # 439
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-05
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 855 1330 / 860 1335
* notice: next accum: outdated-unq outdated-all / unq all: 855 1330 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-04]

2024-10-03T00:53:03Z: