@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-07T00:55:08Z",
-  "count_outdated" : 1332,
-  "uniques_outdated" : 857,
+  "timestamp" : "2024-10-11T00:53:00Z",
+  "count_outdated" : 1333,
+  "uniques_outdated" : 858,
   "count" : 1336,
   "uniques" : 861,
   "clones" : [
-    {
-      "timestamp": "2024-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-01T00:00:00Z",
       "count": 1,
